# fastapi-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: weather.py
app/core/: config.py
app/services/: weather_service.py
tests/: conftest.py  test_weather.py
